--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@prismicio/client": "^4.0.0",
+    "@types/js-cookie": "^3.0.1",
     "date-fns": "^2.26.0",
-    "next": "10.0.7",
+    "js-cookie": "^3.0.1",
+    "next": "12.0.4",
     "prismic-dom": "^2.2.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
